I think we need to move the work I've been doing here to the userauth service... refactoring soon
